--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.jar=${dist.dir}/clock.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.zmanim-1.4.0alpha.jar=/Users/yaakov/Downloads/zmanim-1.4.0alpha.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.zmanim-1.4.0alpha.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
